Fix alignment of the text within the chat bubble

--- a/components/chat/chat.css
+++ b/components/chat/chat.css
@@ -134,6 +134,29 @@ li:not(.my_message) .reminder {
     right: -2.3em;
 }
 
+#messages li:not(.my_message) {
+    text-align: left;
+}
+
+#messages li .my_message {
+    text-align: right;
+}
+
+.chat_container #messages li {
+    padding: 0.5em;
+    margin: 0.2em;
+    border-radius: 10px;
+    max-width: 60%;
+    text-wrap: wrap;
+    position: relative;
+    word-break: break-word;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    hyphens: auto;
+    box-sizing: border-box;
+    background-color: #BBD8A3;
+}
+
 .chat_container .new_reminder {
     width: 100%;
     height: 100%;
